# Portfolio

./: .gitignore  .pylintrc  ci.bat  credentials_type_file.json  main.py  pyproject.toml
backend/api/: yahoo_finance.py  yahoo_finance_processor.py
src/backend/api/: yahoo_finance.py  yahoo_finance_processor.py
src/backend/app/: mysql_yahoo_finance_connection.py
src/utilities/: api_dataframe_processor_framework.py  custom_decorators.py  db_connection_framework.py  mysql_connection_framework.py
tests/backend/api/: test_yahoo_finance.py  test_yahoo_finance_processor.py  test_yf_conn.py
tests/backend/app/: test_mysql_yahoo_finance_connection.py
