[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Portfolio Quantitative Finance"
authors = ["Javier Campoy <jcampoyvilchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
black = "^23.11.0"
isort = "^5.13.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
